# TruthLayer

./: .dockerignore  .env.example  .gcloudignore  .gitignore  .pre-commit-config.yaml  .secrets.baseline  00-README.md  01-phase-1-foundations.md  02-phase-2-orchestration.md  03-phase-3-evals-deploy.md  04-phase-4-production-credibility.md  CLAUDE.md  DEPLOYMENT.md  Dockerfile  LEARNING_NOTES.md  Makefile  PREREQUISITES-CHECKLIST.md  README.md  SECURITY-CHECKLIST.md  docker-compose.yml  pyproject.toml  railway.toml  render.yaml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
eval/: analyze_usage.py  baseline_report.md  calibration.py  calibration_report.md  dataset.json  error_analysis.md  latency_report.md  rerank_parallel_scored.md  reranking_report.md  run_eval.py  score_eval.py  taxonomy_fix_directional.md
eval/results/: 20260708T182007Z_baseline.json  20260708T183028Z_rerank_parallel.json  20260719T015451Z_taxonomy_fix_directional.json
frontend/: .env.local.example  package-lock.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/lib/: api.ts  rateLimit.ts
migrations/: 001_init.sql  002_verified_claims.sql  003_feedback.sql  004_published_date.sql  005_hybrid_search.sql
tests/: conftest.py  test_api.py  test_cache.py  test_calibration.py  test_chunking.py  test_cli.py  test_confidence.py  test_config.py  test_db.py  test_decompose.py  test_embedding.py  test_graph.py  test_ingest.py  test_reranker.py  test_resilience.py  test_retrieval.py  test_search.py  test_source_credibility.py  test_streaming.py  test_verdict.py
(+26 files in other folders)
